--- a/my-shopping-app/src/App.css
+++ b/my-shopping-app/src/App.css
@@ -36,3 +36,28 @@
     transform: rotate(360deg);
   }
 }
+
+.jumbotron {
+  padding: 10px;
+  background-color: cyan;
+
+  text-align: center;
+}
+
+.card {
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.card-header {
+  padding: 10px;
+  background-color: green;
+  color: black;
+  font-weight: bold;
+}
+
+.card-footer {
+  padding: 10px;
+  color: black;
+  font-weight: bold;
+}
